crates/takusu-agent/tests/snapshots/schema_snapshots__tool_update_habit.snap
---
source: crates/takusu-agent/tests/schema_snapshots.rs
expression: def
---
{
  "function": {
    "description": "Create a recurring habit update proposal. Calling this tool generates a pending approval request; it does not write immediately.",
    "name": "update_habit",
    "parameters": {
      "additionalProperties": false,
      "properties": {
        "abandonability": {
          "description": "A value in [0.0, 1.0]; out-of-range values are silently clamped.",
          "type": "number"
        },
        "active": {
          "type": "boolean"
        },
        "allows_parallel": {
          "type": "boolean"
        },
        "avg_minutes": {
          "type": "integer"
        },
        "description": {
          "type": "string"
        },
        "end_time": {
          "description": "Time of day (HH:MM).",
          "type": "string"
        },
        "fixed": {
          "description": "If true, generated tasks start at a fixed time and the scheduler will not move them.",
          "type": "boolean"
        },
        "habit_ref": {
          "type": "string"
        },
        "inferred_fields": {
          "description": "List of fields that were inferred from ambiguous user input and should be highlighted. Do not include obvious conversions (e.g. '1 hour' -> 60 minutes) or values filled from the current date/time.",
          "items": {
            "additionalProperties": false,
            "properties": {
              "field": {
                "description": "Name of the inferred field.",
                "type": "string"
              },
              "reason": {
                "description": "Reason the field was inferred.",
                "type": "string"
              },
              "value": {
                "description": "Inferred value for the field."
              }
            },
            "required": [
              "field",
              "value",
              "reason"
            ],
            "type": "object"
          },
          "type": "array"
        },
        "parallelizable": {
          "type": "boolean"
        },
        "recurrence": {
          "type": "string"
        },
        "sigma_minutes": {
          "type": "integer"
        },
        "start_time": {
          "description": "Time of day (HH:MM).",
          "type": "string"
        },
        "steps": {
          "description": "Complete ordered steps to replace existing ones. Match existing steps by position.",
          "items": {
            "additionalProperties": false,
            "properties": {
              "abandonability": {
                "description": "A value in [0.0, 1.0]; out-of-range values are silently clamped.",
                "type": "number"
              },
              "allows_parallel": {
                "type": "boolean"
              },
              "avg_minutes": {
                "type": "integer"
              },
              "depends_on": {
                "description": "Display positions (1-indexed) of steps this step depends on.",
                "items": {
                  "type": "integer"
                },
                "type": "array"
              },
              "description": {
                "type": "string"
              },
              "end_time": {
                "description": "Time of day (HH:MM).",
                "type": "string"
              },
              "fixed": {
                "type": "boolean"
              },
              "parallelizable": {
                "type": "boolean"
              },
              "position": {
                "description": "1-indexed display position of the step within the habit. On update, matching existing positions update existing steps; new positions create new steps.",
                "type": "integer"
              },
              "sigma_minutes": {
                "type": "integer"
              },
              "start_time": {
                "description": "Time of day (HH:MM).",
                "type": "string"
              },
              "title": {
                "type": "string"
              }
            },
            "required": [
              "position",
              "title",
              "start_time",
              "end_time",
              "avg_minutes"
            ],
            "type": "object"
          },
          "type": "array"
        },
        "title": {
          "type": "string"
        },
        "warnings": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "why": {
          "description": "Short user-facing reason for the proposed change.",
          "type": "string"
        },
        "window_mode": {
          "description": "Scheduling window mode for generated tasks.",
          "enum": [
            "day",
            "period"
          ],
          "type": "string"
        }
      },
      "required": [
        "habit_ref"
      ],
      "type": "object"
    }
  },
  "type": "function"
}
